; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_keycodes.c_mp_print_key_list.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_keycodes.c_mp_print_key_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }
%struct.mp_log = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@key_names = common dso_local global %struct.TYPE_2__* null, align 8
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_print_key_list(%struct.mp_log* %0) #0 {
  %2 = alloca %struct.mp_log*, align 8
  %3 = alloca i32, align 4
  store %struct.mp_log* %0, %struct.mp_log** %2, align 8
  %4 = load %struct.mp_log*, %struct.mp_log** %2, align 8
  %5 = call i32 (%struct.mp_log*, i8*, ...) @mp_info(%struct.mp_log* %4, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %23, %1
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @key_names, align 8
  %8 = load i32, i32* %3, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i64 %9
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %26

14:                                               ; preds = %6
  %15 = load %struct.mp_log*, %struct.mp_log** %2, align 8
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @key_names, align 8
  %17 = load i32, i32* %3, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 (%struct.mp_log*, i8*, ...) @mp_info(%struct.mp_log* %15, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32* %21)
  br label %23

23:                                               ; preds = %14
  %24 = load i32, i32* %3, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %3, align 4
  br label %6

26:                                               ; preds = %6
  ret void
}

declare dso_local i32 @mp_info(%struct.mp_log*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
